[package]
name = "mycelix-bridge-entry-types"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shared entry types for Mycelix cluster bridge integrity zomes"

[dependencies]
hdi = "0.7.0"
holochain_serialized_bytes = "0.0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
