[package]
name = "mycelix-leptos-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Browser-compatible Holochain client for Leptos frontends"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "BinaryType", "Blob",
    "ErrorEvent", "CloseEvent", "console", "Window"
] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Native transport (for testing against real conductor without browser)
tokio = { version = "1", features = ["rt", "macros", "sync", "net", "time"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["browser"]
browser = []
tauri = []
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
holochain_client = "=0.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
