[package]
name = "civic-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for mycelix-civic cluster hApp"
publish = false
autotests = false

[lib]
path = "lib.rs"

[dependencies]
holochain = { version = "0.6", features = ["test_utils", "sweettest"] }
holochain_types = "0.6"
hdk = "0.6"
hdi = "0.7"
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[[test]]
name = "sweettest_integration"
path = "sweettest_integration.rs"

[[test]]
name = "sweettest_bridge_media"
path = "sweettest_bridge_media.rs"

[[test]]
name = "sweettest_justice_emergency"
path = "sweettest_justice_emergency.rs"

[[test]]
name = "sweettest_consciousness_gating"
path = "sweettest_consciousness_gating.rs"
