[package]
name = "mycelix-climate-tests"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Comprehensive test suite for mycelix-climate hApp"
publish = false

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Add test-specific dependencies here as needed
